--- a/2016-10-05/source/300x50.css
+++ b/2016-10-05/source/300x50.css
@@ -165,10 +165,10 @@
 }
 
 
-/*-- slide down --*/
-@-webkit-keyframes slideDown {
+/*-- panning --*/
+@-webkit-keyframes panning {
   0%   {
-    -webkit-transform: translate(0,-100%);
+    -webkit-transform: translate(0,-25px);
     visibility: visible;
     opacity: 1;
   }
@@ -178,9 +178,9 @@
     opacity: 1;
   }
 }
-@-moz-keyframes slideDown {
+@-moz-keyframes panning {
   0%   {
-    -moz-transform: translate(0,-100%);
+    -moz-transform: translate(0,-25px);
     visibility: visible;
     opacity: 1;
   }
@@ -190,9 +190,9 @@
     opacity: 1;
   }
 }
-@keyframes slideDown {
+@keyframes panning {
   0%   {
-    transform: translate(0,-100%);
+    transform: translate(0,-25px);
     visibility: visible;
     opacity: 1;
   }
@@ -272,7 +272,7 @@
   animation: hideContent 10ms ease-in-out 0s forwards;
 }
 .content{
-  background: url('./images/300x50_bg.jpg') no-repeat center center;
+  background-color: #ffffff;
   background-size: 100% 100%;
   -webkit-animation: fadeIn 0.5s ease-in-out 1s forwards;
   -moz-animation: fadeIn 0.5s ease-in-out 1s forwards;
@@ -284,6 +284,45 @@
   -moz-animation: hideContent 10ms ease-in-out 0s forwards;
   animation: hideContent 10ms ease-in-out 0s forwards; 
 }
+
+.image {
+  background: url('./images/300x50_image.jpg') no-repeat center center;
+  background-size: 100% auto;
+  width: 147px;
+  height: 89px;
+  top: -14px;
+  left: 0px;
+
+  -webkit-animation: panning 4s linear 1.1s forwards;
+  -moz-animation: panning 4s linear 1.1s forwards;
+  animation: panning 4s linear 1.1s forwards;
+}
+.steel {
+  background: url('./images/300x50_steel.png') no-repeat center center;
+  background-size: 100% auto;
+  width: 36px;
+  height: 18px;
+  top: 4px;
+  left: 100px;
+
+  -webkit-animation: fadeIn 0.5s ease-in-out 1s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 1s forwards;
+  animation: fadeIn 0.5s ease-in-out 1s forwards;
+}
+.background {
+  background: url('./images/300x50_bg.jpg') no-repeat center center;
+  background-size: 100% auto;
+  width: 158px;
+  height: 50px;
+  right: 0px;
+  bottom: 0px;
+
+  -webkit-animation: fadeIn 0.5s ease-in-out 1s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 1s forwards;
+  animation: fadeIn 0.5s ease-in-out 1s forwards;
+}
+
+
 .logo {
   background: url('./images/300x50_logo.png') no-repeat center center;
   background-size: 100% auto;
@@ -292,21 +331,9 @@
   left: 183px;
   bottom: 6px;
 
-  -webkit-animation: fadeIn 0.5s ease-in-out 2s forwards;
-  -moz-animation: fadeIn 0.5s ease-in-out 2s forwards;
-  animation: fadeIn 0.5s ease-in-out 2s forwards;
-}
-.image {
-  background: url('./images/300x50_image.jpg') no-repeat center center;
-  background-size: auto 100%;
-  width: 142px;
-  height: 50px;
-  top: 0px;
-  left: 0px;
-
-  -webkit-animation: slideDown 2s ease-in-out 3s forwards;
-  -moz-animation: slideDown 2s ease-in-out 3s forwards;
-  animation: slideDown 2s ease-in-out 3s forwards;
+  -webkit-animation: fadeIn 0.5s ease-in-out 1.5s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 1.5s forwards;
+  animation: fadeIn 0.5s ease-in-out 1.5s forwards;
 }
 .text {
   background: url('./images/300x50_text.png') no-repeat center center;
@@ -316,9 +343,9 @@
   left: 158px;
   top: 6px;
 
-  -webkit-animation: fadeInDown 0.5s ease-in-out 4.5s forwards;
-  -moz-animation: fadeInDown 0.5s ease-in-out 4.5s forwards;
-  animation: fadeInDown 0.5s ease-in-out 4.5s forwards;
+  -webkit-animation: fadeInDown 0.5s ease-in-out 5.5s forwards;
+  -moz-animation: fadeInDown 0.5s ease-in-out 5.5s forwards;
+  animation: fadeInDown 0.5s ease-in-out 5.5s forwards;
 }
 .cta {
   background: url('./images/300x50_cta.png') no-repeat center center;
@@ -328,7 +355,7 @@
   right: 0px;
   bottom: 0px;
 
-  -webkit-animation: fadeInLeft 0.5s ease-in-out 5.5s forwards;
-  -moz-animation: fadeInLeft 0.5s ease-in-out 5.5s forwards;
-  animation: fadeInLeft 0.5s ease-in-out 5.5s forwards;
+  -webkit-animation: fadeInLeft 0.5s ease-in-out 6.5s forwards;
+  -moz-animation: fadeInLeft 0.5s ease-in-out 6.5s forwards;
+  animation: fadeInLeft 0.5s ease-in-out 6.5s forwards;
 }
