--- a/2016-10-05/source/728x90.css
+++ b/2016-10-05/source/728x90.css
@@ -165,10 +165,10 @@
 }
 
 
-/*-- slide down --*/
-@-webkit-keyframes slideDown {
+/*-- panning --*/
+@-webkit-keyframes panning {
   0%   {
-    -webkit-transform: translate(0,-100%);
+    -webkit-transform: translate(0,-118px);
     visibility: visible;
     opacity: 1;
   }
@@ -178,9 +178,9 @@
     opacity: 1;
   }
 }
-@-moz-keyframes slideDown {
+@-moz-keyframes panning {
   0%   {
-    -moz-transform: translate(0,-100%);
+    -moz-transform: translate(0,-118px);
     visibility: visible;
     opacity: 1;
   }
@@ -190,9 +190,9 @@
     opacity: 1;
   }
 }
-@keyframes slideDown {
+@keyframes panning {
   0%   {
-    transform: translate(0,-100%);
+    transform: translate(0,-118px);
     visibility: visible;
     opacity: 1;
   }
@@ -272,7 +272,7 @@
   animation: hideContent 10ms ease-in-out 0s forwards;
 }
 .content{
-  background: url('./images/728x90_bg.jpg') no-repeat center center;
+  background-color: #ffffff;
   -webkit-animation: fadeIn 0.5s ease-in-out 1s forwards;
   -moz-animation: fadeIn 0.5s ease-in-out 1s forwards;
   animation: fadeIn 0.5s ease-in-out 1s forwards;
@@ -283,6 +283,42 @@
   -moz-animation: hideContent 10ms ease-in-out 0s forwards;
   animation: hideContent 10ms ease-in-out 0s forwards; 
 }
+
+.image {
+  background: url('./images/728x90_image.jpg') no-repeat center center;
+  width: 434px;
+  height: 244px;
+  top: -36px;
+  left: 0px;
+
+  -webkit-animation: panning 5s linear 1.1s forwards;
+  -moz-animation: panning 5s linear 1.1s forwards;
+  animation: panning 5s linear 1.1s forwards;
+}
+.steel {
+  background: url('./images/728x90_steel.png') no-repeat center center;
+  width: 62px;
+  height: 30px;
+  top: 11px;
+  right: 352px;
+
+  -webkit-animation: fadeIn 0.5s ease-in-out 1s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 1s forwards;
+  animation: fadeIn 0.5s ease-in-out 1s forwards;
+}
+.background {
+  background: url('./images/728x90_bg.jpg') no-repeat center center;
+  width: 304px;
+  height: 90px;
+  right: 0px;
+  bottom: 0px;
+
+  -webkit-animation: fadeIn 0.5s ease-in-out 1s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 1s forwards;
+  animation: fadeIn 0.5s ease-in-out 1s forwards;
+}
+
+
 .logo {
   background: url('./images/728x90_logo.png') no-repeat center center;
   width: 109px;
@@ -290,21 +326,11 @@
   right: 12px;
   bottom: 10px;
 
-  -webkit-animation: fadeIn 0.5s ease-in-out 2s forwards;
-  -moz-animation: fadeIn 0.5s ease-in-out 2s forwards;
-  animation: fadeIn 0.5s ease-in-out 2s forwards;
+  -webkit-animation: fadeIn 0.5s ease-in-out 1.5s forwards;
+  -moz-animation: fadeIn 0.5s ease-in-out 1.5s forwards;
+  animation: fadeIn 0.5s ease-in-out 1.5s forwards;
 }
-.image {
-  background: url('./images/728x90_image.jpg') no-repeat center center;
-  width: 424px;
-  height: 90px;
-  top: 0px;
-  left: 0px;
 
-  -webkit-animation: slideDown 2s ease-in-out 3s forwards;
-  -moz-animation: slideDown 2s ease-in-out 3s forwards;
-  animation: slideDown 2s ease-in-out 3s forwards;
-}
 .text {
   background: url('./images/728x90_text.png') no-repeat center center;
   width: 157px;
@@ -312,9 +338,9 @@
   top: 10px;
   left: 441px;
 
-  -webkit-animation: fadeInDown 0.5s ease-in-out 4.5s forwards;
-  -moz-animation: fadeInDown 0.5s ease-in-out 4.5s forwards;
-  animation: fadeInDown 0.5s ease-in-out 4.5s forwards;
+  -webkit-animation: fadeInDown 0.5s ease-in-out 6.5s forwards;
+  -moz-animation: fadeInDown 0.5s ease-in-out 6.5s forwards;
+  animation: fadeInDown 0.5s ease-in-out 6.5s forwards;
 }
 .cta {
   background: url('./images/728x90_cta.png') no-repeat center center;
@@ -323,7 +349,7 @@
   left: 439px;
   bottom: 9px;
 
-  -webkit-animation: fadeInRight 0.5s ease-in-out 5.5s forwards;
-  -moz-animation: fadeInRight 0.5s ease-in-out 5.5s forwards;
-  animation: fadeInRight 0.5s ease-in-out 5.5s forwards;
+  -webkit-animation: fadeInRight 0.5s ease-in-out 7.5s forwards;
+  -moz-animation: fadeInRight 0.5s ease-in-out 7.5s forwards;
+  animation: fadeInRight 0.5s ease-in-out 7.5s forwards;
 }
