--- a/2016-10-03/source/300x250.css
+++ b/2016-10-03/source/300x250.css
@@ -168,30 +168,36 @@
 @-webkit-keyframes fadeOutUpBig {
   0%   {
     visibility: visible;
+    opacity: 1;
     -webkit-transform: translate(0,0);
   }
   100% { 
     visibility: visible;
+    opacity: 1;
     -webkit-transform: translate(0,-100%);
   }
 }
 @-moz-keyframes fadeOutUpBig {
   0%   {
     visibility: visible;
+    opacity: 1;
     -moz-transform: translate(0,0);
   }
   100% { 
     visibility: visible;
+    opacity: 1;
     -moz-transform: translate(0,-100%);
   }
 }
 @keyframes fadeOutUpBig {
   0%   {
     visibility: visible;
+    opacity: 1;
     transform: translate(0,0);
   }
   100% { 
     visibility: visible;
+    opacity: 1;
     transform: translate(0,-100%);
   }
 }
@@ -200,8 +206,8 @@
 @-webkit-keyframes fadeInUpBig {
   0%   {
     visibility: visible;
-    opacity: 0;
-    -webkit-transform: translate(0,100%);
+    opacity: 1;
+    -webkit-transform: translate(0,300px);
   }
   100% { 
     visibility: visible;
@@ -212,8 +218,8 @@
 @-moz-keyframes fadeInUpBig {
   0%   {
     visibility: visible;
-    opacity: 0;
-    -moz-transform: translate(0,100%);
+    opacity: 1;
+    -moz-transform: translate(0,300px);
   }
   100% { 
     visibility: visible;
@@ -224,8 +230,8 @@
 @keyframes fadeInUpBig {
   0%   {
     visibility: visible;
-    opacity: 0;
-    transform: translate(0,100%);
+    opacity: 1;
+    transform: translate(0,300px);
   }
   100% { 
     visibility: visible;
@@ -358,9 +364,6 @@
 }
 .content{
   background-color: #ffffff;
-  -webkit-animation: fadeIn 1s ease-in-out 1s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 1s forwards;
-  animation: fadeIn 1s ease-in-out 1s forwards;
 }
 
 .frame1-container {
@@ -370,6 +373,10 @@
 }
 .frame1-bg {
   background: url('./images/300x250_frame1_bg.jpg') no-repeat center center;
+
+  -webkit-animation: fadeIn 10ms ease-in-out 0s forwards;
+  -moz-animation: fadeIn 10ms ease-in-out 0s forwards;
+  animation: fadeIn 10ms ease-in-out 0s forwards;
 }
 .frame1-text-container {
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
@@ -383,9 +390,9 @@
   top: 36px;
   left: 50px;
 
-  -webkit-animation: fadeInDown 0.5s ease-in-out 2s forwards;
-  -moz-animation: fadeInDown 0.5s ease-in-out 2s forwards;
-  animation: fadeInDown 0.5s ease-in-out 2s forwards;
+  -webkit-animation: fadeInDown 0.5s ease-in-out 1s forwards;
+  -moz-animation: fadeInDown 0.5s ease-in-out 1s forwards;
+  animation: fadeInDown 0.5s ease-in-out 1s forwards;
 }
 
 .frame2-container {
@@ -395,6 +402,10 @@
 }
 .frame2-bg {
   background: url('./images/300x250_frame2_bg.jpg') no-repeat center center;
+  width: 300px;
+  height: 533px;
+  left: 0px;
+  bottom: 0px;
 
   -webkit-animation: fadeInUpBig 1s ease-in-out 3.5s forwards;
   -moz-animation: fadeInUpBig 1s ease-in-out 3.5s forwards;
