--- a/2016-10-03/source/300x250.css
+++ b/2016-10-03/source/300x250.css
@@ -332,6 +332,58 @@
 }
 
 
+/*-- fade in zoom out 2--*/
+@-webkit-keyframes fadeInZoomOut2 {
+  0%   {
+    visibility: visible;
+    opacity: 0;
+    -webkit-transform: scale(1,1);
+  }
+  50% {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: scale(1.1,1.1);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: scale(1,1);
+  }
+}
+@-moz-keyframes fadeInZoomOut2 {
+  0%   {
+    visibility: visible;
+    opacity: 0;
+    -moz-transform: scale(1,1);
+  }
+  50% {
+    visibility: visible;
+    opacity: 1;
+    -moz-transform: scale(1.1,1.1);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 1;
+    -moz-transform: scale(1,1);
+  }
+}
+@keyframes fadeInZoomOut2 {
+  0%   {
+    visibility: visible;
+    opacity: 0;
+    transform: scale(1,1);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1.1,1.1);
+  }
+  100% { 
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1,1);
+  }
+}
+
 
 /*-------------------------------------------*/
 * {
@@ -637,9 +689,9 @@
   bottom: 50px;
   left: 88px;
 
-  -webkit-animation: fadeInZoomOut 0.4s ease-in-out 7.2s forwards;
-  -moz-animation: fadeInZoomOut 0.4s ease-in-out 7.2s forwards;
-  animation: fadeInZoomOut 0.4s ease-in-out 7.2s forwards;
+  -webkit-animation: fadeInZoomOut 0.8s ease-in-out 7.2s forwards;
+  -moz-animation: fadeInZoomOut 0.8s ease-in-out 7.2s forwards;
+  animation: fadeInZoomOut 0.8s ease-in-out 7.2s forwards;
 }
 
 .dot2-1 {
@@ -648,9 +700,9 @@
   top: 194px;
   left: 210px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.6s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.6s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 7.6s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8s forwards;
 
 }
 .dot2-2 {
@@ -659,9 +711,9 @@
   top: 200px;
   left: 217px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.7s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.7s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 7.7s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.1s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.1s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.1s forwards;
 }
 .dot2-3 {
   width: 6px;
@@ -669,9 +721,9 @@
   top: 206px;
   left: 226px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.8s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.8s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 7.8s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.2s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.2s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.2s forwards;
 }
 .dot2-4 {
   width: 5px;
@@ -679,9 +731,9 @@
   top: 209px;
   left: 235px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 7.9s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 7.9s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 7.9s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.3s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.3s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.3s forwards;
 }
 .dot2-5 {
   width: 5px;
@@ -689,9 +741,9 @@
   top: 205px;
   left: 247px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 8s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.4s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.4s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.4s forwards;
 }
 .dot2-6 {
   width: 5px;
@@ -699,9 +751,9 @@
   top: 194px;
   left: 249px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.1s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.1s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 8.1s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.5s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.5s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.5s forwards;
 }
 .dot2-7 {
   width: 6px;
@@ -709,9 +761,9 @@
   top: 185px;
   left: 243px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.2s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.2s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 8.2s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.6s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.6s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.6s forwards;
 }
 .dot2-8 {
   width: 5px;
@@ -719,9 +771,9 @@
   top: 180px;
   left: 235px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.3s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.3s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 8.3s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.7s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.7s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.7s forwards;
 }
 .dot2-9 {
   width: 5px;
@@ -729,9 +781,9 @@
   top: 174px;
   left: 227px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.4s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.4s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 8.4s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.8s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.8s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.8s forwards;
 }
 .dot2-10 {
   width: 5px;
@@ -739,9 +791,9 @@
   top: 167px;
   left: 219px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.5s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.5s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 8.5s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.9s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.9s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 8.9s forwards;
 }
 .dot2-11 {
   width: 5px;
@@ -749,9 +801,9 @@
   top: 160px;
   left: 211px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.6s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.6s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 8.6s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9s forwards;
 }
 .dot2-12 {
   width: 5px;
@@ -759,9 +811,9 @@
   top: 150px;
   left: 207px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.7s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.7s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 8.7s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.1s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.1s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.1s forwards;
 }
 .dot2-13 {
   width: 5px;
@@ -769,9 +821,9 @@
   top: 139px;
   left: 207px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.8s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.8s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 8.8s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.2s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.2s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.2s forwards;
 }
 .dot2-14 {
   width: 5px;
@@ -779,9 +831,9 @@
   top: 128px;
   left: 206px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 8.9s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 8.9s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 8.9s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.3s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.3s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.3s forwards;
 }
 .dot2-15 {
   width: 5px;
@@ -789,9 +841,9 @@
   top: 115px;
   left: 210px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 9s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.4s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.4s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.4s forwards;
 }
 .dot2-16 {
   width: 5px;
@@ -799,9 +851,9 @@
   top: 109px;
   left: 218px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.1s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.1s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 9.1s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.5s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.5s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.5s forwards;
 }
 .dot2-17 {
   width: 5px;
@@ -809,9 +861,9 @@
   top: 106px;
   left: 229px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.2s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.2s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 9.2s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.6s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.6s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.6s forwards;
 }
 .dot2-18 {
   width: 5px;
@@ -819,9 +871,9 @@
   top: 106px;
   left: 241px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.3s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.3s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 9.3s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.7s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.7s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.7s forwards;
 }
 .dot2-19 {
   width: 5px;
@@ -829,9 +881,9 @@
   top: 108px;
   left: 251px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.4s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.4s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 9.4s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.8s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.8s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.8s forwards;
 }
 .dot2-20 {
   width: 6px;
@@ -839,9 +891,9 @@
   top: 116px;
   left: 260px;
 
-  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.5s forwards;
-  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.5s forwards;
-  animation: fadeInZoomOut 0.2s ease-in-out 9.5s forwards;
+  -webkit-animation: fadeInZoomOut 0.2s ease-in-out 9.9s forwards;
+  -moz-animation: fadeInZoomOut 0.2s ease-in-out 9.9s forwards;
+  animation: fadeInZoomOut 0.2s ease-in-out 9.9s forwards;
 }
 
 .frame2-dots-ie {
