Update animation and images

--- a/2016-10-26/source/300x250_en.css
+++ b/2016-10-26/source/300x250_en.css
@@ -164,7 +164,7 @@
 @-webkit-keyframes slideLeft {
   0%   {
     visibility: visible;
-    -webkit-transform: translate(-94px,0);
+    -webkit-transform: translate(-159px,0);
   }
   100% { 
     visibility: visible;
@@ -174,7 +174,7 @@
 @-moz-keyframes slideLeft {
   0%   {
     visibility: visible;
-    -moz-transform: translate(-94px,0);
+    -moz-transform: translate(-159px,0);
   }
   100% { 
     visibility: visible;
@@ -184,7 +184,7 @@
 @keyframes slideLeft {
   0%   {
     visibility: visible;
-    transform: translate(-94px,0);
+    transform: translate(-159px,0);
   }
   100% { 
     visibility: visible;
@@ -248,7 +248,7 @@
 
 .image {
   background: url('./images/300x250_eng_image.jpg') no-repeat center center;
-  width: 394px;
+  width: 459px;
   height: 250px;
   top: 0px;
   left: 0px;
@@ -259,9 +259,9 @@
 }
 .logo {
   background: url('./images/300x250_eng_logo.png') no-repeat center center;
-  width: 127px;
-  height: 88px;
-  top: 29px;
+  width: 147px;
+  height: 103px;
+  top: 32px;
   left: 0px;
 
   -webkit-animation: fadeIn 1s ease-in-out 2.75s forwards;
@@ -270,10 +270,10 @@
 }
 .text {
   background: url('./images/300x250_eng_text.png') no-repeat center center;
-  width: 157px;
-  height: 32px;
-  top: 143px;
-  left: 22px;
+  width: 183px;
+  height: 38px;
+  top: 165px;
+  left: 25px;
 
   -webkit-animation: fadeIn 1s ease-in-out 3.75s forwards;
   -moz-animation: fadeIn 1s ease-in-out 3.75s forwards;
@@ -281,12 +281,12 @@
 }
 .cta {
   background: url('./images/300x250_eng_cta.png') no-repeat center center;
-  width: 129px;
-  height: 23px;
-  left: 76px;
-  bottom: 50px;
+  width: 147px;
+  height: 26px;
+  left: 90px;
+  bottom: 18px;
 
-  -webkit-animation: fadeInLeft 0.5s ease-in-out 4.5s forwards;
-  -moz-animation: fadeInLeft 0.5s ease-in-out 4.5s forwards;
-  animation: fadeInLeft 0.5s ease-in-out 4.5s forwards;
+  -webkit-animation: fadeIn 1s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 0.5s forwards;
+  animation: fadeIn 1s ease-in-out 0.5s forwards;
 }
