--- a/2016-10-26/source/300x250_fr.css
+++ b/2016-10-26/source/300x250_fr.css
@@ -259,9 +259,9 @@
 }
 .logo {
   background: url('./images/300x250_fr_logo.png') no-repeat center center;
-  width: 147px;
-  height: 103px;
-  top: 32px;
+  width: 196px;
+  height: 121px;
+  top: 0px;
   left: 0px;
 
   -webkit-animation: fadeIn 1s ease-in-out 2.75s forwards;
@@ -270,10 +270,10 @@
 }
 .text {
   background: url('./images/300x250_fr_text.png') no-repeat center center;
-  width: 219px;
-  height: 44px;
-  top: 159px;
-  left: 3px;
+  width: 290px;
+  height: 57px;
+  top: 154px;
+  left: 7px;
 
   -webkit-animation: fadeIn 1s ease-in-out 3.75s forwards;
   -moz-animation: fadeIn 1s ease-in-out 3.75s forwards;
@@ -281,10 +281,10 @@
 }
 .cta {
   background: url('./images/300x250_fr_cta.png') no-repeat center center;
-  width: 188px;
-  height: 27px;
-  left: 51px;
-  bottom: 18px;
+  width: 230px;
+  height: 35px;
+  right: 0px;
+  bottom: 1px;
 
   -webkit-animation: fadeIn 1s ease-in-out 0.5s forwards;
   -moz-animation: fadeIn 1s ease-in-out 0.5s forwards;
