--- a/2016-11-05/source/728x90_portfolio.css
+++ b/2016-11-05/source/728x90_portfolio.css
@@ -340,7 +340,7 @@
   background: url('./images/728x90_portfolio_dell_logo.png') no-repeat center center;
   width: 113px;
   height: 21px;
-  top: 12px;
+  top: 9px;
   left: 15px;
 
   -webkit-animation: fadeInRight 0.5s ease-in-out 1.5s forwards;
@@ -351,8 +351,8 @@
   background: url('./images/728x90_portfolio_header.png') no-repeat center center;
   width: 225px;
   height: 31px;
-  top: 15px;
-  left: 146px;
+  top: 12px;
+  left: 153px;
 
   -webkit-animation: fadeInRight 0.5s ease-in-out 2.75s forwards;
   -moz-animation: fadeInRight 0.5s ease-in-out 2.75s forwards;
@@ -363,8 +363,8 @@
   background: url('./images/728x90_portfolio_sub.png') no-repeat center center;
   width: 160px;
   height: 26px;
-  top: 56px;
-  left: 145px;
+  top: 53px;
+  left: 152px;
 
   -webkit-animation: fadeInRight 0.5s ease-in-out 3s forwards;
   -moz-animation: fadeInRight 0.5s ease-in-out 3s forwards;
@@ -374,7 +374,7 @@
   background: url('./images/728x90_portfolio_cta.png') no-repeat center center;
   width: 89px;
   height: 28px;
-  top: 54px;
+  top: 51px;
   left: 15px;
 
   -webkit-animation: fadeInUp 0.5s ease-in-out 4s forwards;
@@ -383,10 +383,10 @@
 }
 .intel-logo {
   background: url('./images/728x90_portfolio_intel_logo.png') no-repeat center center;
-  width: 231px;
-  height: 58px;
-  top: 27px;
-  left: 341px;
+  width: 206px;
+  height: 47px;
+  top: 22px;
+  right: 16px;
 
   -webkit-animation: fadeInLeft 0.5s ease-in-out 1.75s forwards;
   -moz-animation: fadeInLeft 0.5s ease-in-out 1.75s forwards;
