Show cta at the beginning

--- a/2017/2017-02/2017-02-07/source/300x250.css
+++ b/2017/2017-02/2017-02-07/source/300x250.css
@@ -341,7 +341,7 @@
   left: 0;
   bottom: 0;
 
-  -webkit-animation: fadeInUp 0.5s ease-in-out 4.25s forwards;
-  -moz-animation: fadeInUp 0.5s ease-in-out 4.25s forwards;
-  animation: fadeInUp 0.5s ease-in-out 4.25s forwards;
+  -webkit-animation: fadeIn 1s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 0.5s forwards;
+  animation: fadeIn 1s ease-in-out 0.5s forwards;
 }
