--- a/2017/2017-02/2017-02-07/source/728x90.css
+++ b/2017/2017-02/2017-02-07/source/728x90.css
@@ -341,7 +341,7 @@
   right: 0;
   bottom: 0;
 
-  -webkit-animation: fadeInLeft 0.5s ease-in-out 4.25s forwards;
-  -moz-animation: fadeInLeft 0.5s ease-in-out 4.25s forwards;
-  animation: fadeInLeft 0.5s ease-in-out 4.25s forwards;
+  -webkit-animation: fadeIn 1s ease-in-out 0.5s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 0.5s forwards;
+  animation: fadeIn 1s ease-in-out 0.5s forwards;
 }
