--- a/2017/2017-02/2017-02-27/source/300x250.css
+++ b/2017/2017-02/2017-02-27/source/300x250.css
@@ -171,6 +171,43 @@
   }
 }
 
+/*-- fade out down --*/
+@-webkit-keyframes fadeOutDown {
+  0%   {
+    visibility: visible;
+    -webkit-transform: translate(0,0);
+    opacity: 1;
+  }
+  100% { 
+    visibility: visible;
+    -webkit-transform: translate(0,10px);
+    opacity: 0;
+  }
+}
+@-moz-keyframes fadeOutDown {
+  0%   {
+    visibility: visible;
+    -moz-transform: translate(0,0);
+    opacity: 1;
+  }
+  100% { 
+    visibility: visible;
+    -moz-transform: translate(0,10px);
+    opacity: 0;
+  }
+}
+@keyframes fadeOutDown {
+  0%   {
+    visibility: visible;
+    transform: translate(0,0);
+    opacity: 1;
+  }
+  100% { 
+    visibility: visible;
+    transform: translate(0,10px);
+    opacity: 0;
+  }
+}
 
 /*-------------------------------------------*/
 * {
@@ -275,4 +312,48 @@
   -webkit-animation: fadeInDown 0.5s ease-in-out 3.75s forwards;
   -moz-animation: fadeInDown 0.5s ease-in-out 3.75s forwards;
   animation: fadeInDown 0.5s ease-in-out 3.75s forwards;
+}
+
+.image-container {
+  -webkit-animation: fadeOutDown 0.75s ease-in-out 6.25s forwards;
+  -moz-animation: fadeOutDown 0.75s ease-in-out 6.25s forwards;
+  animation: fadeOutDown 0.75s ease-in-out 6.25s forwards;
+}
+.image2 {
+  background: url('./images/300x250_image2.jpg') no-repeat center center;
+  width: 151px;
+  height: 250px;
+  top: 0;
+  left: 0;
+
+  -webkit-animation: fadeInUp 0.75s ease-in-out 6.5s forwards;
+  -moz-animation: fadeInUp 0.75s ease-in-out 6.5s forwards;
+  animation: fadeInUp 0.75s ease-in-out 6.5s forwards;
+}
+.text-container {
+  -webkit-animation: fadeOutDown 0.75s ease-in-out 6.25s forwards;
+  -moz-animation: fadeOutDown 0.75s ease-in-out 6.25s forwards;
+  animation: fadeOutDown 0.75s ease-in-out 6.25s forwards;
+}
+.text2 {
+  background: url('./images/300x250_text2.png') no-repeat center center;
+  width: 119px;
+  height: 78px;
+  top: 84px;
+  left: 164px;
+
+  -webkit-animation: fadeInUp 0.75s ease-in-out 6.75s forwards;
+  -moz-animation: fadeInUp 0.75s ease-in-out 6.75s forwards;
+  animation: fadeInUp 0.75s ease-in-out 6.75s forwards;
+}
+.cta2 {
+  background: url('./images/300x250_cta2.png') no-repeat center center;
+  width: 116px;
+  height: 29px;
+  left: 166px;
+  bottom: 18px;
+
+  -webkit-animation: fadeIn 0.75s ease-in-out 8s forwards;
+  -moz-animation: fadeIn 0.75s ease-in-out 8s forwards;
+  animation: fadeIn 0.75s ease-in-out 8s forwards;
 }
